# token-rugcheck

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.gateway  OPERATIONS.md  README.md  deploy.yaml  devnet_buyer_test.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/superpowers/specs/: 2026-03-15-ai-ops-framework-design.md
examples/: demo_agent.py
ops/: .env.secrets.example  manifest.schema.yaml  manifest.yaml.example
ops/experiences/: 2026-03-14-ag402-payment-test-constraints.md  2026-03-14-dns-cloudflare-mismatch.md  2026-03-14-env-secrets-exposure.md
ops/runbooks/common/: 00-preflight.md  01-server-init.md
ops/runbooks/templates/: 02-deploy.md  03-verify.md  04-payment-test.md  05-upgrade.md  06-rollback.md  07-troubleshoot.md
scripts/: backup-data.sh  deploy-all-modes.sh  deploy-oneclick.sh  deploy.sh  generate-env.sh  monitor-deps.py  payment-test.py  quick-update.sh  setup-server.sh  smoke_test.sh  verify.sh
src/rugcheck/: cache.py  config.py  gateway.py  gateway_wrapper.py  models.py  quota.py  server.py
src/rugcheck/engine/: risk_engine.py
src/rugcheck/fetchers/: aggregator.py  base.py  goplus.py  rugcheck.py  trending.py
static/: playground.html
tests/: _diag_full.py  _diag_runner.py  test_ag402_e2e.py  test_cache.py  test_engine.py  test_gateway_wrapper.py  test_quota.py  test_security.py  test_server.py
tests/test_fetchers/: test_aggregator.py  test_base.py  test_dexscreener.py  test_goplus.py  test_rugcheck.py
