[project]
name = "token-rugcheck-mcp"
version = "0.1.0"
description = "Solana token safety audit service — rug pull detection for AI agents, powered by ag402 micropayments"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "ag402-mcp>=0.1.15",
    "ag402-core>=0.1.15",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
crypto = [
    "ag402-core[crypto]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
